--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
