--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "ag-charts-community": "^6.1.3",
+    "ag-charts-react": "^6.1.1",
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "bootstrap": "^5.1.3",
