--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "ag-charts-react": "^6.1.1",
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router-bootstrap": "^0.26.1",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
