--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.1",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.11",
         "@onflow/fcl": "^1.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
