--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
         "ag-grid-community": "^28.1.0",
         "ag-grid-react": "^28.1.0",
         "bootstrap": "^5.3.2",
-        "node-sass": "^7.0.3",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.0",
         "react-dom": "^18.2.0",
@@ -57,6 +56,7 @@
     },
     "devDependencies": {
         "react-router-dom": "^6.3.0",
-        "react-test-renderer": "^18.2.0"
+        "react-test-renderer": "^18.2.0",
+        "sass": "^1.89.0"
     }
 }
